Fix Header align responsive and background color

--- a/frontend/app/styles/directives/navbar-secondary.scss
+++ b/frontend/app/styles/directives/navbar-secondary.scss
@@ -4,16 +4,21 @@
 }
 
 .navbar-secondary {
-  background-color:$background-blue;
+  background-color: $header-secondary;
   border-color:transparent;
   border-radius:0px;
   margin-bottom:0px;
+  padding: 0.6em;
 }
 
 .navbar-secondary-title:hover{
-  cursor:pointer;
-  background-color: black !important;
+  cursor: pointer;
+  border-radius: 1px;
+  border: 1px solid #3597c7a6;
+  background-color: #2c2f3017;
+
 }
+
 .navbar-secondary-title{
   color:white !important;
 }
@@ -28,10 +33,18 @@
 
 .collapsed{
   margin-top:20px;
+  background-color: white;
 }
 .navbar-logo{
-   width: 160px;
+   width: 190px;
 }
 
+.boxCenter{
+  justify-content: center;
+  display: flex;
+}
 
+.padding-top{
+  padding-top: 0.5em;
+}
 
