--- a/frontend/app/styles/login.scss
+++ b/frontend/app/styles/login.scss
@@ -187,8 +187,3 @@ form.login a
 .form-login{
   min-height: 400px;
 }
-
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: red;
-  opacity: 1; /* Firefox */
-}
