--- a/frontend/app/styles/variables.scss
+++ b/frontend/app/styles/variables.scss
@@ -8,7 +8,7 @@ $border-grey: #E5E5E5;
 $font-color: #999999;
 $background-module-hover: #1b6d85;
 $servimap-blue: #3A598F;
-$header-secondary: #0289CB;
+$header-secondary: #137cb0;
 
 
 /* MIXINGS */
